--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "htmlparser2": "^9.0.0"
+    "htmlparser2": "^9.0.0",
+    "mocha": "^10.2.0"
   },
   "name": "sdjs",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
