--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "acorn": "^8.11.3",
+    "acorn-walk": "^8.3.2",
     "chai": "^5.0.3",
+    "escodegen": "^2.1.0",
     "htmlparser2": "^9.0.0",
     "mocha": "^10.2.0"
   },
